--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         enthusiast specialized in building stunning pixel-perfect interactive
         websites/applications.
       </p>
-      <a class="hero__btn btn" href="/pages/test.html">Reach out</a>
+      <a class="hero__btn btn" href="#about">Reach out</a>
     </section>
     <!--! About section-->
     <section id="about" class="about container section">
