--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://api.fontshare.com/v2/css?f[]=general-sans@500,600,400,700&display=swap" rel="stylesheet" />
   <meta name="description" content="My Portfolio website" />
   <meta name="keywords" content="web design, html, css, js" />
-  <title>Portfolio Website</title>
+  <title>Matter Portfolio </title>
 </head>
 
 <body>
